[gd_scene load_steps=7 format=2]

[ext_resource path="res://Theme/fonts/NotoSerifJP-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Sounds/sfx/select2.ogg" type="AudioStream" id=2]
[ext_resource path="res://Theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/options.gd" type="Script" id=4]
[ext_resource path="res://Sounds/sfx/respawn.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 1 )

[node name="Options" type="Control"]
margin_right = 1440.0
margin_bottom = 840.0
script = ExtResource( 4 )

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = 164.0
margin_right = 6.0
margin_bottom = 256.0
rect_scale = Vector2( 2, 2 )

[node name="Volume" type="Label" parent="Options"]
margin_right = 150.0
margin_bottom = 23.0
focus_neighbour_top = NodePath("../Back")
custom_fonts/font = SubResource( 1 )
text = "Volume"

[node name="volSlider" type="HSlider" parent="Options"]
margin_top = 27.0
margin_right = 150.0
margin_bottom = 43.0
max_value = 50.0
value = 50.0

[node name="Debug Mode" type="Button" parent="Options"]
margin_top = 47.0
margin_right = 150.0
margin_bottom = 67.0
toggle_mode = true
text = "Debug Mode"

[node name="Back" type="Button" parent="Options"]
margin_top = 71.0
margin_right = 150.0
margin_bottom = 91.0
focus_neighbour_bottom = NodePath("../Volume")
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -276.0
margin_right = -71.0
margin_bottom = -195.0
rect_scale = Vector2( 3, 3 )

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 161.0
margin_bottom = 81.0
theme = ExtResource( 3 )
text = " Fruit Bat 
Adventure"

[node name="select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="select2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
pitch_scale = 1.66

[node name="volumeNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="focus_entered" from="Options/Volume" to="." method="_on_Start_focus_entered"]
[connection signal="value_changed" from="Options/volSlider" to="." method="_on_volSlider_value_changed"]
[connection signal="focus_entered" from="Options/Debug Mode" to="." method="_on_Options_focus_entered"]
[connection signal="pressed" from="Options/Debug Mode" to="." method="_on_Options_pressed"]
[connection signal="toggled" from="Options/Debug Mode" to="." method="_on_Debug_Mode_toggled"]
[connection signal="focus_entered" from="Options/Back" to="." method="_on_Quit_focus_entered"]
[connection signal="pressed" from="Options/Back" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_Back_pressed"]
